--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,259 @@
         </div>
       </div>
     </div>
-    <div class="sidebar"></div>
-    <div class="maincontant"></div>
+    <div class="sidebar">
+      <div class="post1">
+        <a href="./blog.html">ТОП-5 гаджетов на kickstarter для интерьера</a>
+      </div>
+      <div class="post2">
+        <a href="./blog.html"
+          >Новые технологии в дизайне интерьера: система умный дом</a
+        >
+      </div>
+      <div class="post3">
+        <a href="./blog.html"
+          >Как обустроить комнату для подростка: мнение эксперта</a
+        >
+      </div>
+      <div class="post4">
+        <a href="./blog.html"
+          >Кухня + гостиная: как правильно объединить обе зоны</a
+        >
+      </div>
+      <div class="post5">
+        <a href="./blog.html"
+          >Элитная кухня — правила оформления и дизайна кухни мечты</a
+        >
+      </div>
+      <div class="post6">
+        <a href="./blog.html">
+          Использование натуральных материалов в дизайне интерьера</a
+        >
+      </div>
+    </div>
+    <div class="content">
+      <div class="maincontent">
+        <div class="imgdiz1">
+          <img src="./diz-1.jpg" alt="diz-1" />
+        </div>
+        <div class="SID">
+          <h3>Стиль и дизайн интерьера</h3>
+        </div>
+        <p>
+          <strong>Стиль</strong> — совокупность художественных средств и приемов
+          их использования, характерная для произведений искусства. Стиль в
+          интерьере можно трактовать как единство художественного направления,
+          гармоничное сочетание черт и характерных особенностей создаваемого
+          пространства. Все основные принципы композиции, которые применяются в
+          изобразительном искусстве, также применимы и к созданию интерьера.
+        </p>
+        <p>
+          <strong>Дом для человека</strong> — это место, где тепло и уютно, где
+          он чувствует себя защищенным. Вкус, достаток, философия хозяина дома
+          могут с возрастом меняться… И через обустройство жизненного
+          пространства человек выражает черты своей личности, создает
+          неповторимость собственной территории.
+        </p>
+        <p>
+          Современный рынок предлагает нам широкий ассортимент средств для
+          ремонта, меблировки и декорирования дома. Проблема «достать»
+          превратилась в проблему «выбрать». По отдельности вещи, которые вам
+          нравятся, могут быть прекрасными, а вот вместе… Очень важно в самом
+          начале пути к вашему дому мечты решить принципиальные вопросы, такие
+          как зонирование, с учетом образа жизни хозяина и членов семьи. И
+          выбрать общую линию оформления всех помещений, что в итоге сформирует
+          единый цельный образ вашего дома — стиль.
+        </p>
+        <p>
+          В современном <strong>дизайне интерьеров</strong> можно насчитать
+          несколько десятков направлений:
+        </p>
+        <ul>
+          <li>лофт</li>
+          <li>модерн</li>
+          <li>классицизм</li>
+          <li>ар-деко</li>
+          <li>минимализм</li>
+          <li>хай-тек</li>
+          <li>этно</li>
+        </ul>
+        <p>
+          Это далеко не все стили, существующие в дизайне интерьера и
+          архитектуре. Некоторые из них подразделяются еще на несколько
+          направлений, и наоборот, допустимо некое смешение стилей. Например, в
+          классическом интерьере могут присутствовать элементы современного
+          дизайна. Важно, чтобы они были уместны, гармонично вписывались в
+          окружающее пространство.
+        </p>
+        <div class="SID">
+          <h3>Неоклассика</h3>
+        </div>
+        <div class="neo">
+          <div class="neo-p">
+            <p>
+              Подходит для основательных и консервативных людей, в этом стиле
+              присутствуют элементы античной архитектуры, некоторая
+              тяжеловесность и солидность. В современном интерьере классический
+              стиль комбинируется с другими стилями, образуя прекрасные
+              вариации.
+            </p>
+            <p>
+              Элегантность, изысканность, лаконичность в сочетании с
+              проверенными временем решениями делают неоклассику всегда
+              современной и востребованной. Этот интерьер всегда в тренде, его
+              легко воплотить и просто освежать небольшими локальными
+              изменениями. Вместе с экспертом рассказываем об основных чертах
+              неоклассического стиля.
+            </p>
+          </div>
+          <div class="diz-neo">
+            <img src="./diz-neo.jpg" alt="neo" />
+          </div>
+        </div>
+        <div class="SID">
+          <h3>Фьюжен</h3>
+        </div>
+        <div class="fuz">
+          <div class="fuz-p">
+            <p>
+              Этот стиль идеально подойдет современным, подвижным, ярким
+              личностям — тем, кто хочет заявить о себе, о своих пристрастиях и
+              интересах.
+            </p>
+            <p>
+              Фьюжен предполагает смешение стилей и позволяет создавать
+              уникальный и не похожий ни на что интерьер. Этот стиль в
+              интерьерном дизайне на пике моды. Интерьер в стиле фьюжен — символ
+              современной глобализации, смешение классики и абстракционизма,
+              Востока и Запада, чувственности и практичности. Обаяние этого
+              стиля состоит в неограниченном творчестве. Берем за основу
+              классический интерьер и добавляем все, что нам нравится.
+              Отсутствие доскональной проработки деталей, легкая небрежность,
+              богемный шик.
+            </p>
+          </div>
+          <div class="diz-fuz">
+            <img src="./diz-fuz.jpg" alt="fuz" />
+          </div>
+        </div>
+        <div class="SID">
+          <h3>Хай-Тек</h3>
+        </div>
+        <div class="hy">
+          <div class="hy-p">
+            <p>
+              Идеально подходит для молодых, целеустремленных, подвижных людей,
+              которые следят за модой, любят технологичные вещи,
+              функциональность пространства.
+            </p>
+            <p>
+              Стиль хай-тек зародился в пору бурного развития технологий и
+              покорения космического пространства. Бунтарский порыв дизайнеров
+              нарушить привычные каноны классического интерьера породил новый
+              стиль, который вот уже несколько десятилетий занимает «топовые»
+              позиции в мире дизайна пространства. Во главе угла — простые линии
+              в создании форм и высокие технологии, эстетика материала и
+              максимальная функциональность.
+            </p>
+          </div>
+          <div class="diz-hy">
+            <img src="./diz-hy.jpg" alt="diz-hy" />
+          </div>
+        </div>
+        <div class="SID">
+          <h3>Лофт</h3>
+        </div>
+        <div class="lof">
+          <div class="lof-p">
+            <p>
+              Для персон, которым нужен простор, много воздуха, свобода
+              движения, идеально подойдет стиль лофт или его последняя
+              интерпретация — индастриал.
+            </p>
+            <p>
+              Значение английского слова loft — чердак, комната на верхнем
+              этаже, сам верхний этаж. Обозначать этим словом новый интерьерный
+              стиль начали недавно, хотя сам он зародился еще в первой половине
+              двадцатого века в Нью-Йорке, в заводском районе Манхэттена.
+              Помещения неработающих цехов и мастерских стали снимать под студии
+              небогатые художники, музыканты, артисты. Сейчас жилье в стиле лофт
+              считается исключительно элитным и уже не по карману бедным
+              родоначальникам этого стиля.
+            </p>
+          </div>
+          <div class="diz-lof">
+            <img src="./diz-lof.jpg" alt="diz-lof" />
+          </div>
+        </div>
+        <div class="SID">
+          <h3>Прованс</h3>
+        </div>
+        <div class="prov">
+          <div class="prov-p">
+            <p>
+              Для тех, кто ищет близости с природой, любит летнее солнце, запах
+              цветов, ценит домашний уют.
+            </p>
+            <p>
+              Стиль прованс является одним из направлений стиля кантри,
+              включающего в себя несколько десятков разновидностей. Несмотря на
+              все разнообразие, именно кантри завоевал наиболее широкую
+              аудиторию. Размеренная деревенская жизнь дает ощущение
+              спокойствия. Выгоревшие на солнце цвета, большие окна. Много живых
+              и засушенных растений, естественность, простота, незамысловатость
+              линий. Стилю свойственна архаичность. Изменения деревенскими
+              жителями принимаются медленно и с опаской.
+            </p>
+          </div>
+          <div class="diz-prov">
+            <img src="./diz-prov.jpg" alt="diz-prov" />
+          </div>
+        </div>
+        <div class="SID">
+          <h3>Скандинавский</h3>
+        </div>
+        <div class="scan">
+          <div class="scan-p">
+            <p>
+              Идеально подойдет тем, кто ценит тепло и уют, защищенность личного
+              пространства. В этом стиле нашли идеальное воплощение простота,
+              индивидуальность и экологичность.
+            </p>
+            <p>
+              Для тех, кто ценит тепло и уют, защищенность, найдет в
+              скандинавском стиле идеальное воплощение понятий простоты,
+              индивидуальности и экологичности.
+            </p>
+            <p>
+              Если ваш выбор — дизайн интерьера в скандинавском стиле, будьте
+              готовы к ровным спокойным линиям и формам без сильных искривлений
+              или прерывистости. В формах выражается философское отношение к
+              жизни — она должна быть спокойной, без ненужных перегрузок и
+              вселять уверенность в надежности завтрашнего дня.
+            </p>
+          </div>
+          <div class="diz-scan">
+            <img src="./diz-scan.jpeg" alt="diz-scan" />
+          </div>
+        </div>
+        <div class="SID">
+          <h3>Этно</h3>
+        </div>
+        <div class="at">
+          <div class="at-p">
+            <p>Для тех, кто хочет найти созвучное себе, ценит ощущение комфорта и
+              естественности, ищет возвращения к истокам или хранит воспом
+              инания о далекой стране, запавшей в душу.</p>
+            <p>Этнический стиль характеризуется присутствием в интерьере фольклорных 
+               элементов, принадлежащих культуре той или иной страны.</p>
+            <p>Главное! Не смешивать различные культуры. Не стоит мексиканское сомбреро 
+               вешать на японскую ширму. Следовательно, если вы собираетесь оформить интерьер в этничес
+               ком стиле, то в первую очередь нужно определить, культуру какого народа вы хотите видеть в основе своего интерьера.</p>
+          </div>
+          <div class="diz-at">
+            <img src="./diz-at.jpg" alt="diz-at">
+          </div>
+        </div>
+    </div>
   </body>
 </html>
