Bag fix and small improvements

--- a/blog.html
+++ b/blog.html
@@ -37,21 +37,21 @@
         <div class="favorite">
           <form action="./blog.html">
             <button>
-              <img src="./toolsFavorite.png" alt="favorite" />
+              <img src="./иб1.png" alt="favorite" />
             </button>
           </form>
         </div>
         <div class="theme">
           <form action="./blog.html">
             <button>
-              <img src="./toolsTheme.png" alt="theme" />
+              <img src="./тб1.png" alt="theme" />
             </button>
           </form>
         </div>
         <div class="account">
           <form action="./blog.html">
             <button>
-              <img src="./toolsAccount.png" alt="account" />
+              <img src="./аб1.png" alt="account" />
             </button>
           </form>
         </div>
