Add a little JS and small changes

--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./logo1.png" type="image/x-icon" />
+    <script src="./learn.js"></script>
     <title>BoxMaker</title>
   </head>
   <body>
@@ -163,7 +164,7 @@
             </p>
           </div>
           <div class="diz-neo">
-            <img src="./diz-neo.jpg" alt="neo" />
+            <img src="./diz-neo1.jfif" alt="neo" />
           </div>
         </div>
         <div class="SID">
@@ -189,7 +190,7 @@
             </p>
           </div>
           <div class="diz-fuz">
-            <img src="./diz-fuz.jpg" alt="fuz" />
+            <img src="./diz-fuz1.jfif" alt="fuz" />
           </div>
         </div>
         <div class="SID">
@@ -213,7 +214,7 @@
             </p>
           </div>
           <div class="diz-hy">
-            <img src="./diz-hy.jpg" alt="diz-hy" />
+            <img src="./diz-hy1.jfif" alt="diz-hy" />
           </div>
         </div>
         <div class="SID">
@@ -238,7 +239,7 @@
             </p>
           </div>
           <div class="diz-lof">
-            <img src="./diz-lof.jpg" alt="diz-lof" />
+            <img src="./diz-lof1.jfif" alt="diz-lof" />
           </div>
         </div>
         <div class="SID">
@@ -262,7 +263,7 @@
             </p>
           </div>
           <div class="diz-prov">
-            <img src="./diz-prov.jpg" alt="diz-prov" />
+            <img src="./diz-prov1.jfif" alt="diz-prov" />
           </div>
         </div>
         <div class="SID">
@@ -289,7 +290,7 @@
             </p>
           </div>
           <div class="diz-scan">
-            <img src="./diz-scan.jpeg" alt="diz-scan" />
+            <img src="./diz-scan1.jfif" alt="diz-scan" />
           </div>
         </div>
         <div class="SID">
@@ -307,7 +308,7 @@
                ком стиле, то в первую очередь нужно определить, культуру какого народа вы хотите видеть в основе своего интерьера.</p>
           </div>
           <div class="diz-at">
-            <img src="./diz-at.jpg" alt="diz-at">
+            <img src="./diz-at1.jfif" alt="diz-at">
           </div>
         </div>
     </div>
